# aida-crud

./: .gitignore  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
backend/: .pypirc.example  CHANGELOG.md  MANIFEST.in  PUBLISHING.md  README.md  publish.sh  pyproject.toml  pytest.ini  setup.py
backend/aida_crud/: __init__.py
backend/aida_crud/audit/: __init__.py  models.py
backend/aida_crud/core/: __init__.py  base_model.py  managers.py  metadata.py
backend/aida_crud/exporters/: __init__.py  base_exporter.py
backend/aida_crud/filters/: __init__.py  base_filter.py
backend/aida_crud/mixins/: __init__.py  audit_mixin.py  bulk_mixin.py  export_mixin.py  soft_delete_mixin.py
backend/aida_crud/serializers/: __init__.py  base_serializer.py  bulk_serializer.py
backend/aida_crud/viewsets/: __init__.py  base_viewset.py
backend/tests/: conftest.py  test_models.py  test_viewsets.py
frontend/aida-crud/: .eslintrc.js  .prettierrc  index.ts  package.json  tailwind.config.js  vitest.config.ts
frontend/aida-crud/components/: AidaForm.vue  AidaTable.vue
frontend/aida-crud/composables/: useCrud.ts
frontend/aida-crud/styles/: index.css
frontend/aida-crud/tests/: setup.ts
frontend/aida-crud/tests/composables/: useCrud.test.ts
frontend/aida-crud/types/: index.ts
